<resources>
    <string name="app_name">NASA</string>
    <string name="nasa_image">NASA image</string>
    <string name="search">Search</string>
    <string name="start_year">start year</string>
    <string name="end_year">end year</string>
    <string name="min_year">1920</string>
    <string name="max_year">2022</string>
    <string name="image_of_day">Image of day</string>
    <string name="search_images">Search images</string>
    <string name="map">Map</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="settings">Settings</string>
    <string name="no_data">Nothing was found according to your request</string>
    <string name="try_again">try again</string>
    <string name="try_reload">try reload</string>
    <string name="flag">flag</string>
    <string name="search_button">Search Button</string>
</resources>